--- a/CSS/mainsite.css
+++ b/CSS/mainsite.css
@@ -81,6 +81,7 @@ iframe{
     height: inherit;
     border-radius: inherit;
     border:none;
+    
 }
 
 
@@ -222,7 +223,9 @@ figcaption{
     .burgermenu{
         display:block;
         margin: 0 0 0 0;
-
+    }
+    .burgermenu:hover{
+        cursor: pointer;
     }
     
 }
