--- a/CSS/mainsite.css
+++ b/CSS/mainsite.css
@@ -64,6 +64,7 @@ nav a{
     
     display:none;
 }
+
 .big{
     margin:3em;
     display: flex;
@@ -213,6 +214,10 @@ figcaption{
         margin-left:15em;
         margin-bottom: 3em;
     }
+
+    .buttonboard{
+        width:80%;
+    }
     
   }
 
@@ -223,9 +228,21 @@ figcaption{
     .burgermenu{
         display:block;
         margin: 0 0 0 0;
+
     }
     .burgermenu:hover{
         cursor: pointer;
+    }
+    #menu-box ul li{
+        
+        width:100%;
+        padding:1em;
+        text-align:center;
+    }
+
+    #menu-box ul li:hover{
+        opacity: 0.7;
+        background-color:rgba(98, 91, 110, 1)
     }
     
 }
