--- a/CSS/vaheleht1.css
+++ b/CSS/vaheleht1.css
@@ -2,7 +2,7 @@
     height: 300px;
     display: flex;
     justify-content: space-between;
-    font-size:1.5em;
+    font-size:1.2em;
 }
 
 .lehtpooleks img{
@@ -16,6 +16,10 @@
     text-justify: inter-word;
 }
 
+#nimi{
+    font-size: 1.4em;
+}
+
 #footer{
     background-color:  #2c2538;
     margin-top: 1em;
@@ -24,4 +28,8 @@
     left: 0;
     bottom: 0;
     width: 100%;
+}
+
+html,body{
+    color: rgba(255, 255, 255, 0.7);
 }
