Täiustatud Minu Profiil

--- a/CSS/vaheleht2.css
+++ b/CSS/vaheleht2.css
@@ -50,25 +50,39 @@ nav a{
 .big1{
     margin-left: 200px;
     margin-right: 200px;
-    border-left: 5px  rgb(187, 168, 199);
+    padding-left: 50px;
+    border-left: 5px solid rgb(187, 168, 199);
     background-color: rgb(35, 17, 46, 0.2);
 
- }
+}
 
 .big2{
-    border: 100px;
-    justify-content: space-between;
- }
- 
- .boxL{
-    padding-right: 50px darkgrey;
+    display:flex;
+    flex-wrap: wrap;
+}
+
+#photo{
+    padding-right: 50px;
     padding-top: 50px;
     padding-bottom: 50px;
-    border-top: darkgrey;
-    border-right: darkgrey;
-    border-bottom: darkgrey;
- }
+}
+
+#andmed{
+    padding-left: 50px;
+    margin-top: 50px;
+    margin-bottom: 50px;
+    border-left: 2px solid rgb(187, 168, 199);
+}
 
  h1{
     font-size: 400%;
+ }
+
+ h2{
+     font-size: 300%;
+ }
+
+h3{
+    line-height: 50px;
+    font-size: 200%;
  }
