--- a/CSS/vaheleht1.css
+++ b/CSS/vaheleht1.css
@@ -17,11 +17,12 @@
 }
 
 #footer{
-    background-color:  #2c2538;
+    background-color:   rgba(35, 17, 46, 0.2);
     margin-top: 1em;
     position: fixed;
     text-align: center;
     left: 0;
     bottom: 0;
     width: 100%;
+    color:white;
 }
